# hal-linux

./: .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  settings.cmake
.gitlab/ci/: build.yml  deploy.yml  quality.yml  trigger.yml
cmake/: hal-interfaces.cmake
lib/: CMakeLists.txt
lib/gpio/: CMakeLists.txt  LinuxGpio.cpp
lib/gpio/include/hal/gpio/: LinuxGpio.hpp
lib/i2c/: CMakeLists.txt  LinuxI2c.cpp
lib/i2c/include/hal/i2c/: LinuxI2c.hpp
lib/logger/: CMakeLists.txt
lib/logger/include/hal/linux/: logger.hpp
lib/logger/include/hal/logger/: linux.hpp
lib/spi/: CMakeLists.txt  LinuxSpi.cpp
lib/spi/include/hal/spi/: LinuxSpi.hpp
lib/uart/: CMakeLists.txt  LinuxUart.cpp
lib/uart/include/hal/uart/: LinuxUart.hpp
tools/: check-clang-tidy.sh
